# QmdEditer

./: CMakeLists.txt  README.md
qmls/: CenterInputWidget.qml  CustomMessageDialog.qml  CustomToolBar.qml  PreviewWidget.qml  SettingLabel.qml  SettingsPage.qml  Sidebar.qml  TitleBar.qml  TitleButton.qml  TitleToolButton.qml  main.qml  qml.qrc
resources/: icon.qrc
src/: globalmethod.cpp  globalmethod.h  highlighter.cpp  highlighter.h  main.cpp
